--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
